minor code comment

--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
+// .env file was comitted because it does not contain sensitive information
+
 export MONGO_HOST="localhost"
 export MONGO_DB_NAME="crud-api"
